# MedImager

./: .gitignore  BUILD.md  MedImager.spec  README.md  README_de.md  README_es.md  README_fr.md  README_zh.md  build_release.bat  compile_translations.py  debug_phantom.npy  medimager.pro  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
dev_docs/: IMAGE_LOADING_GUIDE.md  WATER_PHANTOM_GUIDE.md  程序逻辑.md  设置窗口设计文档.md  设计文档.md  默认工具交互逻辑.md
medimager/: __init__.py  main.py
medimager/core/: __init__.py  analysis.py  dicom_parser.py  image_data_model.py  multi_series_manager.py  roi.py  series_view_binding.py  sync_manager.py
medimager/tests/: __init__.py  test_dicom_parser.py
medimager/tests/scripts/: generate_gammex_phantom.py  generate_water_phantom.py
medimager/themes/measurement/: default.toml
medimager/themes/roi/: default.toml  radiant.toml
medimager/translations/: de_DE.qm  de_DE.ts  en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  zh_CN.qm  zh_CN.ts
medimager/ui/: __init__.py  image_viewer.py  main_toolbar.py  main_window.py  multi_viewer_grid.py  viewport.py
medimager/utils/: __init__.py  hot_reload.py  i18n.py  logger.py  resource_path.py  settings.py  theme_manager.py
release/: BUILD.md  build_release.py
tests/: README.md  conftest.py  run_tests.py  test_main_window.py  test_multi_series_components.py  test_roi.py  test_sync.py
translation_tools/: README.md  auto_translation_generator.py  check_i18n.py  compile_translations.py  config.json  main.py  medical_terms.json  translate_ts.py
(+39 files in other folders)
