[project]
name = "medimager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pydicom>=3.0.1",
    "pyinstaller>=6.14.2",
    "pyside6>=6.9.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
    "toml>=0.10.2",
]
