[project]
name = "medimager"
version = "1.0.1"
description = "A modern, cross-platform open-source DICOM viewer and medical image analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pydicom>=3.0.1",
    "pyside6>=6.9.1",
    "toml>=0.10.2"
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "auto-py-to-exe>=2.0.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0"
]
